--- a/deploy/bank-portal-prod.yaml
+++ b/deploy/bank-portal-prod.yaml
@@ -2,24 +2,23 @@
 kind: Service
 metadata:
   name: portal
-  namespace: production-deployment
+  namespace: ibm-bank
   labels:
     app: portal
     service: portal
 spec:
   ports:
-  - port: 9080
-    name: http
+    - port: 9080
+      name: http
   selector:
     app: portal
   type: LoadBalancer
 ---
-
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: portal-app
-  namespace: production-deployment
+  namespace: ibm-bank
   labels:
     app: portal
     version: v1
@@ -35,10 +34,10 @@ spec:
         version: v1
     spec:
       containers:
-      - name: portal
-        image: docker.io/tonyfieit/portal:v0.3
-        imagePullPolicy: IfNotPresent
-        ports:
-        - containerPort: 9080
+        - name: portal
+          image: docker.io/tonyfieit/portal:v0.3
+          imagePullPolicy: IfNotPresent
+          ports:
+            - containerPort: 9080
       imagePullSecrets:
         - name: tonyfieit75-pull-secret
