--- a/deploy/bank-portal-prod.yaml
+++ b/deploy/bank-portal-prod.yaml
@@ -41,3 +41,24 @@ spec:
             - containerPort: 9080
       imagePullSecrets:
         - name: tonyfieit75-pull-secret
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: portal-ingress
+  namespace: ibm-bank
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
+spec:
+  ingressClassName: nginx
+  rules:
+    - host: portal.example.com
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: portal
+                port:
+                  name: http
