--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,9 +20,9 @@ spring.mvc.static-path-pattern=/resources/**
 server.port=9080
 log4j.logger.com.emc.documentum.rest.log=DEBUG
 rest.message.logging.enabled=true
-transaction.api.url=http://transaction:8080/api/v1/transactions
-customer.api.url=http://customer:8080/api/v1/customers
-account.api.url:http://account:8080/api/v1/accounts
+transaction.api.url=http://ibm-bank.detera.local/api/v1/transactions
+customer.api.url=http://ibm-bank.detera.local/api/v1/customers
+account.api.url=http://ibm-bank.detera.local/api/v1/accounts
 
 ## local test environment
 #transaction.api.url=http://localhost:8083/api/v1/transactions
